<resources>
    <string name="app_name">DAPP</string>
    <string name="title_recent">Recent</string>
    <string name="title_profile">Profile</string>
    <string name="title_publish">Publish</string>
    <string name="title_activity_main">Inklix</string>
    <string name="title_home">Inklix</string>

    <string name="moto">We believe in the wisdom of crowd</string>
    <string name="todo">TODO</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_accont_yet_create_one">No accont yet? Create one!</string>
    <string name="title_activity_news_tab">NewsTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="scepticism">scepticism</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="this_is_description_of_onboarding_one">This is description of onboarding one</string>

    <string name="boarding_one">Boarding one</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="trust">Trust</string>
    <string name="publisher">Publisher</string>
</resources>
