<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:layout_marginTop="125dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/onboarding1"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/boarding_one"
        android:textAlignment="center"
        android:textColor="#275c69"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slide_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
            android:text="@string/this_is_description_of_onboarding_one"
        android:textAlignment="center"
        android:textColor="#475d47"
        android:textSize="16sp" />

</LinearLayout>
