<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    >


    <TextView
        android:id="@+id/moto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/moto"
        android:textAlignment="center"
        android:drawableTop="@drawable/logo"
        android:layout_centerInParent="true"
        android:drawablePadding="20dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="45dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_sign_in"
            style="@style/Widget.AppCompat.Button.Colored"  />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_sign_up"
            style="@style/Widget.AppCompat.Button.Colored"  />


    </LinearLayout>
</RelativeLayout>