<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/reset_password"
            style="@style/Widget.AppCompat.Button.Colored"  />

        <TextView
            android:id="@+id/lbl_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_accont_yet_create_one"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>

</RelativeLayout>