<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_password"
        android:hint="username"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_above="@id/edt_password_confirm"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_above="@id/btn_sign_up"/>


    <Button
        android:id="@+id/btn_sign_up"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/lbl_have_account"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_sign_up" />

    <TextView
        android:id="@+id/lbl_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:text="Already registered. Login Me!"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />


</RelativeLayout>