<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/shadow_bottom"
   >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Title"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/post_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:text="2017/04/03"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <ImageView
                android:id="@+id/post_img"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/card_view_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/post_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textAlignment="gravity"
                    android:textColor="#555" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/publisher_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/publisher_image"
                    app:civ_border_color="#b7b6b6"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#848880"
                    app:civ_shadow_radius="10" />

                <TextView
                    android:id="@+id/lbl_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/publisher_img"
                    android:text="@string/publisher"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_trust"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toStartOf="@+id/btn_scepticism"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:src="@drawable/ic_trust"
                    android:text="@string/trust"
                    android:textColor="@color/white"
                    android:theme="@style/PrimaryFlatButton" />


                <ImageButton
                    android:id="@+id/btn_scepticism"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="14dp"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:shadowColor="@color/black"
                    android:src="@drawable/ic_scepticism"
                    android:text="@string/scepticism"
                    android:textColor="@color/white"
                    android:theme="@style/PrimaryFlatButton" />

            </RelativeLayout>

        </LinearLayout>
</android.support.v7.widget.CardView>

